# LandForge

./: .gitignore  .txt  Dockerfile.ai  README.md  config.yml  instructions.txt  requirements.txt  sourceonsuiscan.txt  start-backend.sh
landforge_area_intelligence/: configs  data  pyproject.toml
landforge_area_intelligence/src/landforge_area_intelligence/: landforge_area_intelligence.py  register.py
landforge_area_intelligence/src/landforge_area_intelligence.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
landforge_area_intelligence/src/landforge_area_intelligence/configs/: config.yml
landforge_backend/: package-lock.json  package.json  server.js
landforge_backend/src/middleware/: auth.js
landforge_backend/src/models/: AreaReport.js  DocumentVerification.js  EscrowWallet.js  Payment.js  (+4 more)
landforge_frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
landforge_frontend/src/: App.tsx  index.css
landforge_hash_document/: configs  data  pyproject.toml
landforge_hash_document/src/landforge_hash_document/: landforge_hash_document.py  register.py
landforge_hash_document/src/landforge_hash_document.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
landforge_hash_document/src/landforge_hash_document/configs/: config.yml
landforge_smartcontract/: Move.toml
landforge_smartcontract/sources/: landforge_smartcontract.move
landforge_smartcontract/tests/: landforge_smartcontract_tests.move
landforge_verify_document/: configs  data  pyproject.toml
(+45 files in other folders)
